tests/lustre/typechecking/shouldPass/test_contract_assumption_contains_pre.lus
node c (x:int) returns (y: int);
(*@contract
   assume  x = pre y;    -- OK
*)
let
        y = 2 * x;
tel;