tests/lustre/typechecking/shouldFail/machine_integer_05.lus

node top(x: int) returns (y:int);
let
   y = x rsh 4;
tel